--- a/index.html
+++ b/index.html
@@ -22,6 +22,56 @@
         <img class="main-pic" src="images/main.jpg" alt="mainIcon">
     </div>
 
+
+    <div class="locations">
+  <h2>ლოკაციები</h2>
+  <div class="location-grid">
+    <!-- ჯვრისწერა -->
+    <div class="location-card">
+      <h3>ჯვრისწერა</h3>
+      <a href="https://maps.google.com/?q=Tbilisi+Sameba+Cathedral" target="_blank">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.827096!3d41.693802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd8312b1fef%3A0x4efbe17cc65c1dc2!2sHoly%20Trinity%20Cathedral%20of%20Tbilisi!5e0!3m2!1sen!2sge!4v0000000000000" 
+          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </a>
+    </div>
+
+    <!-- ხელისმოწერის ცერემონია -->
+    <div class="location-card">
+      <h3>ხელისმოწერის ცერემონია</h3>
+      <a href="https://maps.google.com/?q=Tbilisi+City+Hall" target="_blank">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.801!3d41.709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cda1c9e0a0b%3A0x68a52f5e3b5a0d0!2sTbilisi%20City%20Hall!5e0!3m2!1sen!2sge!4v0000000000000" 
+          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </a>
+    </div>
+
+    <!-- ფოტოსესია -->
+    <div class="location-card">
+      <h3>ფოტოსესია</h3>
+      <a href="https://maps.google.com/?q=Rike+Park+Tbilisi" target="_blank">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.817!3d41.694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd872087c13%3A0x26f98d2f6536cf9f!2sRike%20Park!5e0!3m2!1sen!2sge!4v0000000000000" 
+          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </a>
+    </div>
+
+    <!-- საზეიმო ვახშამი -->
+    <div class="location-card">
+      <h3>საზეიმო ვახშამი</h3>
+      <a href="https://maps.google.com/?q=Funicular+Restaurant+Tbilisi" target="_blank">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.781!3d41.701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cdddb4a2c03%3A0x86cfb0b6b87a30c3!2sFunicular%20Restaurant%20Complex!5e0!3m2!1sen!2sge!4v0000000000000" 
+          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </a>
+    </div>
+  </div>
+</div>
+
 <div class="countdown-wrapper">
   <h2>Countdown to Our Wedding</h2>
   <div id="countdown" class="countdown">
