--- a/index.html
+++ b/index.html
@@ -95,13 +95,21 @@
     <!-- საზეიმო ვახშამი -->
 <div class="location-card">
   <h3>რესტორანი</h3>
-  <a href="https://maps.app.goo.gl/kfBHmqsVTWTGQGPM8?g_st=ipc" target="_blank">
+
+  <!-- Correct "place" link (opens Google Maps with pin) -->
+  <a href="https://www.google.com/maps/place/%22Kalakuri%22+restaurant/@42.2352308,42.6878178,17z" target="_blank">
+    
+    <!-- Embed iframe with red pin -->
     <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.0021483050047!2d44.78681647647823!3d41.70777027126433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cfd54578e77%3A0x85fc2c3e0f3cf0c3!2sFunicular%20Restaurant%20Complex!5e0!3m2!1sen!2sge!4v1734533342216!5m2!1sen!2sge" 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2935.922572805311!2d42.68524237648276!3d42.23523077119637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405cf2cf02873c3b%3A0x4884c5163b5a073e!2s%22Kalakuri%22%20restaurant!5e0!3m2!1sen!2sge!4v1734569434569!5m2!1sen!2sge" 
       width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
     </iframe>
+
   </a>
 </div>
+
+
+
   </div>
 </div>
 
