--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
   <h2>ლოკაციები</h2>
   <div class="location-grid">
     <!-- ჯვრისწერა -->
-    <div class="location-card">
-      <h3>ჯვრისწერა</h3>
-      <a href="https://maps.google.com/?q=Tbilisi+Sameba+Cathedral" target="_blank">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.827096!3d41.693802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd8312b1fef%3A0x4efbe17cc65c1dc2!2sHoly%20Trinity%20Cathedral%20of%20Tbilisi!5e0!3m2!1sen!2sge!4v0000000000000" 
-          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-      </a>
-    </div>
+<div class="location-card">
+  <h3>ჯვრისწერა</h3>
+
+  <!-- Clickable link to Google Maps -->
+  <a href="https://maps.app.goo.gl/oJfHEpxMQ8hZfrW69?g_st=ipc" target="_blank">
+    
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.486642857451!2d42.7024973!3d42.2772334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405087f148bc0c6d%3A0xa50587f148bc0c6d!2sBagrati%20Cathedral!5e0!3m2!1sen!2sge!4v1734569434569!5m2!1sen!2sge"
+      width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+
+  </a>
+</div>
 
     <!-- ხელისმოწერის ცერემონია -->
     <div class="location-card">
