--- a/index.html
+++ b/index.html
@@ -48,23 +48,17 @@
     <div class="locations">
   <h2>ლოკაციები</h2>
   <div class="location-grid">
-    <!-- ჯვრისწერა -->
 <div class="location-card">
   <h3>ჯვრისწერა</h3>
-
-  <!-- Clickable link to Google Maps -->
   <a href="https://maps.app.goo.gl/oJfHEpxMQ8hZfrW69?g_st=ipc" target="_blank">
-    
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.486642857451!2d42.7024973!3d42.2772334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405087f148bc0c6d%3A0xa50587f148bc0c6d!2sBagrati%20Cathedral!5e0!3m2!1sen!2sge!4v1734569434569!5m2!1sen!2sge"
       width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
     </iframe>
-
   </a>
 </div>
 
-    <!-- ხელისმოწერის ცერემონია -->
-    <div class="location-card">
+    <!-- <div class="location-card">
       <h3>ცერემონია</h3>
       <a href="https://maps.google.com/?q=Tbilisi+City+Hall" target="_blank">
         <iframe 
@@ -74,7 +68,6 @@
       </a>
     </div>
 
-    <!-- ფოტოსესია -->
     <div class="location-card">
       <h3>I ფოტოსესია</h3>
       <a href="https://maps.google.com/?q=Rike+Park+Tbilisi" target="_blank">
@@ -85,7 +78,6 @@
       </a>
     </div>
 
-        <!-- ფოტოსესია -->
     <div class="location-card">
       <h3>II ფოტოსესია</h3>
       <a href="https://maps.google.com/?q=Rike+Park+Tbilisi" target="_blank">
@@ -94,16 +86,13 @@
           width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
       </a>
-    </div>
+    </div> -->
 
-    <!-- საზეიმო ვახშამი -->
 <div class="location-card">
   <h3>რესტორანი</h3>
 
-  <!-- Correct "place" link (opens Google Maps with pin) -->
   <a href="https://www.google.com/maps/place/%22Kalakuri%22+restaurant/@42.2352308,42.6878178,17z" target="_blank">
     
-    <!-- Embed iframe with red pin -->
     <iframe 
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2935.922572805311!2d42.68524237648276!3d42.23523077119637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405cf2cf02873c3b%3A0x4884c5163b5a073e!2s%22Kalakuri%22%20restaurant!5e0!3m2!1sen!2sge!4v1734569434569!5m2!1sen!2sge" 
       width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
@@ -112,9 +101,11 @@
   </a>
 </div>
 
-
-
   </div>
+
+
+  <p class="coming-soon-message">დანარჩენ ლოკაციებსაც მალე დავამატებთ 😊</p>
+
 </div>
 
 
