feat: add more locations

--- a/index.html
+++ b/index.html
@@ -58,35 +58,29 @@
   </a>
 </div>
 
-    <!-- <div class="location-card">
-      <h3>ცერემონია</h3>
-      <a href="https://maps.google.com/?q=Tbilisi+City+Hall" target="_blank">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.801!3d41.709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cda1c9e0a0b%3A0x68a52f5e3b5a0d0!2sTbilisi%20City%20Hall!5e0!3m2!1sen!2sge!4v0000000000000" 
-          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-      </a>
-    </div>
+<div class="location-card">
+  <h3>ცერემონია</h3>
+  <a href="https://www.google.com/maps/place/42%C2%B019'02.1%22N+42%C2%B035'50.1%22E/@42.317245,42.597257,17z" target="_blank">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2931.494085728746!2d42.597257!3d42.317245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDE5JzAyLjEiTiA0MsKwMzUnNTAuMSJF!5e0!3m2!1sen!2sge!4v1736100000000!5m2!1sen!2sge"
+      width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+  </a>
+</div>
 
-    <div class="location-card">
-      <h3>I ფოტოსესია</h3>
-      <a href="https://maps.google.com/?q=Rike+Park+Tbilisi" target="_blank">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.817!3d41.694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd872087c13%3A0x26f98d2f6536cf9f!2sRike%20Park!5e0!3m2!1sen!2sge!4v0000000000000" 
-          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-      </a>
-    </div>
 
-    <div class="location-card">
-      <h3>II ფოტოსესია</h3>
-      <a href="https://maps.google.com/?q=Rike+Park+Tbilisi" target="_blank">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.00569597588!2d44.817!3d41.694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd872087c13%3A0x26f98d2f6536cf9f!2sRike%20Park!5e0!3m2!1sen!2sge!4v0000000000000" 
-          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-      </a>
-    </div> -->
+
+<div class="location-card">
+  <h3>ფოტოსესია</h3>
+  <a href="https://www.google.com/maps/place/Sanatorium+%22Tskaltubo+SPA%22/@42.3204324,42.6022635,17z" target="_blank">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2931.2699400979824!2d42.6022635!3d42.3204324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405c8a8be564408d%3A0xd77e14fd412a8a89!2sSanatorium%20%22Tskaltubo%20SPA%22!5e0!3m2!1sen!2sge!4v1736101234567!5m2!1sen!2sge"
+      width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+  </a>
+</div>
+
+
 
 <div class="location-card">
   <h3>რესტორანი</h3>
