--- a/index.html
+++ b/index.html
@@ -60,14 +60,20 @@
 
 <div class="location-card">
   <h3>ცერემონია</h3>
-  <a href="https://www.google.com/maps/place/42%C2%B019'02.1%22N+42%C2%B035'50.1%22E/@42.317245,42.597257,17z" target="_blank">
+  <a 
+    href="https://www.google.com/maps/place/Tskaltubo+Central+Park/@42.3158192,42.5951295,16.25z/data=!4m6!3m5!1s0x405c8a8d1db64ccd:0x90839196069906a4!8m2!3d42.3144589!4d42.5940196!16s%2Fg%2F11dxsvf9sr?hl=en&entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D" 
+    target="_blank">
     <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2931.494085728746!2d42.597257!3d42.317245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDE5JzAyLjEiTiA0MsKwMzUnNTAuMSJF!5e0!3m2!1sen!2sge!4v1736100000000!5m2!1sen!2sge"
-      width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4961.713008131897!2d42.59512946960715!3d42.31581918474705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405c8a8d1db64ccd%3A0x90839196069906a4!2sTskaltubo%20Central%20Park!5e0!3m2!1sen!2sge!4v1756986159226!5m2!1sen!2sge"
+      width="100%" 
+      height="200" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
     </iframe>
   </a>
 </div>
-
 
 
 <div class="location-card">
