feat: remove text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="location-card">
-  <h3>ცერემონია</h3>
+  <h3>ხელისმოწერის ცერემონია</h3>
   <a 
     href="https://www.google.com/maps/place/Tskaltubo+Central+Park/@42.3158192,42.5951295,16.25z/data=!4m6!3m5!1s0x405c8a8d1db64ccd:0x90839196069906a4!8m2!3d42.3144589!4d42.5940196!16s%2Fg%2F11dxsvf9sr?hl=en&entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D" 
     target="_blank">
@@ -102,9 +102,6 @@ src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4961.713008131897!2d42
 </div>
 
   </div>
-
-
-  <p class="coming-soon-message">დანარჩენ ლოკაციებსაც მალე დავამატებთ 😊</p>
 
 </div>
 
